--- a/catalog/view/theme/d_visualize/template/account/password.twig
+++ b/catalog/view/theme/d_visualize/template/account/password.twig
@@ -5,25 +5,32 @@
       <form action="{{action}}" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
           <legend>{{text_password}}</legend>
-            {% include component.form_group.template with component.form_group|merge({
-            type:'password',
-            id:'input-password',
-            name:'password',
-            value:password,
-            placeholder:entry_password,
-            classes:'',
-            text_input:entry_password,
-            }) %}
-            {% include component.form_group.template with component.form_group|merge({
-            type:'password',
-            id:'input-confirm',
-            name:'confirm',
-            value:password,
-            placeholder:entry_confirm,
-            classes:'',
-            text_input:entry_confirm,
-            }) %}
-
+            {% include component.form_group.template with{
+                form_group:{
+                    label_text:entry_password ,
+                    error:error_password,
+                    input:{
+                        type:'password',
+                        id:'input-password',
+                        name:'password',
+                        value:password,
+                        placeholder:entry_password ,
+                    }
+                }
+            } %}
+            {% include component.form_group.template with{
+                form_group:{
+                    label_text:entry_confirm ,
+                    error:error_confirm,
+                    input:{
+                        type:'password',
+                        id:'input-confirm',
+                        name:'confirm',
+                        value:confirm,
+                        placeholder:entry_confirm ,
+                    }
+                }
+            } %}
         </fieldset>
           {% include component.d_button_continue.template with component.d_button_continue %}
       </form>
