--- a/catalog/view/theme/d_visualize/template/component/d_product_thumb/hydrus.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_thumb/hydrus.twig
@@ -5,26 +5,26 @@
         <a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}"
                                           class="img-responsive"/></a>
         <div class="vz-product-thumb__buttons btn-group">
-            {% include component.button.template with component.button|merge({
+            {% include component.button.template with {button:{
                 button:'cart.add('~ product.product_id ~', '~ minimum ~')',
                 style:'primary',
                 classes:'btn-buy vz-product-thumb__button',
                 text_button:button_cart
-            }) %}
+            }} %}
             <div class="divider"></div>
-            {% include component.button.template with component.button|merge({
+            {% include component.button.template with {button:{
                 button:'wishlist.add('~ product.product_id ~')',
                 style:'primary',
                 classes:'vz-product-thumb__button',
                 icon:'fas fa-heart'
-            }) %}
+            }} %}
             <div class="divider"></div>
-            {% include component.button.template with component.button|merge({
+            {% include component.button.template with {button:{
                 button:'compare.add('~ product.product_id ~')',
                 style:'primary',
                 classes:'vz-product-thumb__button',
                 icon:'fas fa-exchange-alt'
-            }) %}
+            }} %}
         </div>
     </div>
     <div class="vz-product-thumb__caption">
