--- a/catalog/view/theme/d_visualize/template/component/form_group/default_v1.twig
+++ b/catalog/view/theme/d_visualize/template/component/form_group/default_v1.twig
@@ -54,7 +54,7 @@
                        {#data-date-format="YYYY-MM-DD HH:mm" id="{{ id }}"#}
                        {#class="{{ form_group_input_class }}"/>#}
                 {#<span class="input-group-btn">#}
-                        {#{% include component.button.template with component.button|merge({#}
+                        {#{% include component.button.template with {button:{#}
                             {#button: true,#}
                             {#style:'primary',#}
                             {#classes:'',#}
