--- a/catalog/view/theme/d_visualize/template/component/default/remove_btn/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/default/remove_btn/default.twig
@@ -1,16 +1,16 @@
 {% if not remove_link %}
-    {% include component.button.template with component.button|merge({
+    {% include component.button.template with {button:{
         button: 'cart.remove('~ product_id~');',
         style:'danger',
         text_button:'<i class="fas fa-times"></i>',
         title:button_remove ,
-    }) %}
+    }} %}
 {% else %}
-    {% include component.button.template with component.button|merge({
+    {% include component.button.template with {button:{
         link: remove_link,
         style:'danger',
         text_button:'<i class="fas fa-times"></i>',
         title:button_remove ,
-    }) %}
+    }} %}
 {% endif %}
 
