--- a/catalog/view/theme/d_visualize/template/component/product_product/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_product/default.twig
@@ -1,194 +1,196 @@
 <div class="vz-product-product vz-product-product--default">
-        <div class="row">
-            {% if column_left or column_right %}
-                {% set class = 'col-sm-6' %}
-            {% else %}
-                {% set class = 'col-sm-8' %}
-            {% endif %}
-            <div class="{{ class }}">
-                {% include component.product_thumbnails.template %}
-                {% include component.product_tabs.template %}
+    <div class="row">
+        {% if column_left or column_right %}
+            {% set class = 'col-sm-6' %}
+        {% else %}
+            {% set class = 'col-sm-8' %}
+        {% endif %}
+        <div class="{{ class }}">
+            {% include component.product_thumbnails.template %}
+            {% include component.product_tabs.template %}
+        </div>
+        {% if column_left or column_right %}
+            {% set class = 'col-sm-6' %}
+        {% else %}
+            {% set class = 'col-sm-4' %}
+        {% endif %}
+        <div class="{{ class }}">
+            <div class="btn-group">
+                {% include component.button.template with {button:{
+                    onclick:'wishlist.add('~ product_id ~')',
+                    style:'default',
+                    icon:'fas fa-heart',
+                    title_button: button_wishlist,
+                    custom:'data-toggle="tooltip"'
+                }} %}
+                {% include component.button.template with {button:{
+                    onclick:'compare.add('~ product_id ~')',
+                    style:'default',
+                    icon:'fas fa-exchange-alt',
+                    title_button: button_compare,
+                    custom:'data-toggle="tooltip"'
+                }} %}
             </div>
-            {% if column_left or column_right %}
-                {% set class = 'col-sm-6' %}
-            {% else %}
-                {% set class = 'col-sm-4' %}
-            {% endif %}
-            <div class="{{ class }}">
-                <div class="btn-group">
-                    {% include component.button.template with component.button|merge({
-                        button:'wishlist.add('~ product_id ~')',
-                        style:'default',
-                        icon:'fas fa-heart',
-                        title_button: button_wishlist,
-                        custom:'data-toggle="tooltip"'
-                    }) %}
-                    {% include component.button.template with component.button|merge({
-                        button:'compare.add('~ product_id ~')',
-                        style:'default',
-                        icon:'fas fa-exchange-alt',
-                        title_button: button_compare,
-                        custom:'data-toggle="tooltip"'
-                    }) %}
-                </div>
-                <h1 class="vz-product-product__heading heading-h1">{{ heading_title }}</h1>
-                <ul class="list-unstyled">
-                    {% if manufacturer %}
-                        <li class="vz-product-product__manufacturer">{{ text_manufacturer }} <a href="{{ manufacturers }}">{{ manufacturer }}</a></li>
-                    {% endif %}
-                    <li class="vz-product-product__model">{{ text_model }} {{ model }}</li>
-                    {% if reward %}
-                        <li class="vz-product-product__reward">{{ text_reward }} {{ reward }}</li>
-                    {% endif %}
-                    <li class="vz-product-product__stock">{{ text_stock }} {{ stock }}</li>
-                </ul>
+            <h1 class="vz-product-product__heading heading-h1">{{ heading_title }}</h1>
+            <ul class="list-unstyled">
+                {% if manufacturer %}
+                    <li class="vz-product-product__manufacturer">{{ text_manufacturer }} <a
+                                href="{{ manufacturers }}">{{ manufacturer }}</a></li>
+                {% endif %}
+                <li class="vz-product-product__model">{{ text_model }} {{ model }}</li>
+                {% if reward %}
+                    <li class="vz-product-product__reward">{{ text_reward }} {{ reward }}</li>
+                {% endif %}
+                <li class="vz-product-product__stock">{{ text_stock }} {{ stock }}</li>
+            </ul>
 
-                {% if price %}
-                    <div >
-                        <ul class="list-unstyled">
-                            {% if not special %}
-                                <li class="vz-product-product__price">
-                                    <h2>{{ price }}</h2>
-                                </li>
-                            {% else %}
-                                <li class="vz-product-product__price"><span style="text-decoration: line-through;">{{ price }}</span></li>
-                                <li class="vz-product-product__price vz-product-product__price--special">
-                                    <h2>{{ special }}</h2>
-                                </li>
-                            {% endif %}
-                            {% if tax %}
-                                <li class="vz-product-product__tax">{{ text_tax }} {{ tax }}</li>
-                            {% endif %}
-                            {% if points %}
-                                <li class="vz-product-product__points">{{ text_points }} {{ points }}</li>
-                            {% endif %}
-                            {% if discounts %}
-                                <li >
-                                    <hr>
-                                </li>
-                                {% for discount in discounts %}
-                                    <li class="vz-product-product__discount">{{ discount.quantity }}{{ text_discount }}{{ discount.price }}</li>
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
+            {% if price %}
+                <div>
+                    <ul class="list-unstyled">
+                        {% if not special %}
+                            <li class="vz-product-product__price">
+                                <h2>{{ price }}</h2>
+                            </li>
+                        {% else %}
+                            <li class="vz-product-product__price"><span
+                                        style="text-decoration: line-through;">{{ price }}</span></li>
+                            <li class="vz-product-product__price vz-product-product__price--special">
+                                <h2>{{ special }}</h2>
+                            </li>
+                        {% endif %}
+                        {% if tax %}
+                            <li class="vz-product-product__tax">{{ text_tax }} {{ tax }}</li>
+                        {% endif %}
+                        {% if points %}
+                            <li class="vz-product-product__points">{{ text_points }} {{ points }}</li>
+                        {% endif %}
+                        {% if discounts %}
+                            <li>
+                                <hr>
+                            </li>
+                            {% for discount in discounts %}
+                                <li class="vz-product-product__discount">{{ discount.quantity }}{{ text_discount }}{{ discount.price }}</li>
+                            {% endfor %}
+                        {% endif %}
+                    </ul>
+                </div>
+            {% endif %}
+            <div id="product">
+                {% include component.product_options.template %}
+                {% if recurrings %}
+                    <div class="vz-product_product__recurring">
+                        <hr>
+                        <h3>{{ text_payment_recurring }}</h3>
+                        {% include component.form_group.template with component.form_group|merge({
+                            type:'select',
+                            name:'recurring_id',
+                            required: true,
+                            select_values:recurrings,
+                            select_values_val:'recurring_id',
+                            select_values_check: '',
+                            select_values_name: 'name',
+                        }) %}
+                        <div class="help-block" id="recurring-description"></div>
+                        {#maybe bug with this block#}
+                        {#<div class="form-group required">#}
+                        {#<select name="recurring_id" class="form-control">#}
+                        {#<option value="">{{ text_select }}</option>#}
+                        {#{% for recurring in recurrings %}#}
+                        {#<option value="{{ recurring.recurring_id }}">{{ recurring.name }}</option>#}
+                        {#{% endfor %}#}
+                        {#</select>#}
+                        {#<div class="help-block" id="recurring-description"></div>#}
+                        {#</div>#}
                     </div>
                 {% endif %}
-                <div id="product">
-                    {% include component.product_options.template %}
-                    {% if recurrings %}
-                        <div class="vz-product_product__recurring">
-                            <hr>
-                            <h3>{{ text_payment_recurring }}</h3>
-                            {% include component.form_group.template with component.form_group|merge({
-                                type:'select',
-                                name:'recurring_id',
-                                required: true,
-                                select_values:recurrings,
-                                select_values_val:'recurring_id',
-                                select_values_check: '',
-                                select_values_name: 'name',
-                            }) %}
-                            <div class="help-block" id="recurring-description"></div>
-                            {#maybe bug with this block#}
-                            {#<div class="form-group required">#}
-                                {#<select name="recurring_id" class="form-control">#}
-                                    {#<option value="">{{ text_select }}</option>#}
-                                    {#{% for recurring in recurrings %}#}
-                                        {#<option value="{{ recurring.recurring_id }}">{{ recurring.name }}</option>#}
-                                    {#{% endfor %}#}
-                                {#</select>#}
-                                {#<div class="help-block" id="recurring-description"></div>#}
-                            {#</div>#}
-                        </div>
-                    {% endif %}
-                    {% include component.form_group.template with component.form_group|merge({
-                        type:'text',
-                        id:'input-quantity',
-                        name:'quantity',
-                        value:minimum,
-                        text_input:entry_qty
-                    }) %}
-                    <input type="hidden" name="product_id" value="{{ product_id }}"/>
+                {% include component.form_group.template with component.form_group|merge({
+                    type:'text',
+                    id:'input-quantity',
+                    name:'quantity',
+                    value:minimum,
+                    text_input:entry_qty
+                }) %}
+                <input type="hidden" name="product_id" value="{{ product_id }}"/>
 
-                    {% include component.button.template with component.button|merge({
-                        button:button_cart,
-                        id:'button-cart',
-                        text_loading:text_loading,
-                        style:'primary',
-                        size:'lg',
-                        classes:'btn-block',
-                        text_button:button_cart
-                    }) %}
+                {% include component.button.template with {button:{
+                    button:button_cart,
+                    id:'button-cart',
+                    text_loading:text_loading,
+                    style:'primary',
+                    size:'lg',
+                    classes:'btn-block',
+                    text_button:button_cart
+                }} %}
 
-                    {% if minimum > 1 %}
-                        <div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ text_minimum }}</div>
-                    {% endif %}</div>
-                {% if review_status %}
-                    {% include component.d_rating.template with component.d_rating|merge({
-                        static_rating:true,
-                    }) %}
-                    <a href=""
-                       onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ reviews }}</a>
-                    / <a href=""
-                         onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ text_write }}</a>
-                        <hr>
-                        <!-- AddThis Button BEGIN -->
-                        <div class="addthis_toolbox addthis_default_style" data-url="{{ share }}"><a
-                                    class="addthis_button_facebook_like" fb:like:layout="button_count"></a> <a
-                                    class="addthis_button_tweet"></a> <a class="addthis_button_pinterest_pinit"></a> <a
-                                    class="addthis_counter addthis_pill_style"></a></div>
-                        <script type="text/javascript"
-                                src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script>
-                        <!-- AddThis Button END -->
-                {% endif %} </div>
-        </div>
-        {% if products %}
-            <h3>{{ text_related }}</h3>
-            <div class="row"> {% set i = 0 %}
-                {% for product in products %}
-                    {% if column_left and column_right %}
-                        {% set class = 'col-xs-8 col-sm-6' %}
-                    {% elseif column_left or column_right %}
-                        {% set class = 'col-xs-6 col-md-4' %}
-                    {% else %}
-                        {% set class = 'col-xs-6 col-sm-3' %}
-                    {% endif %}
-                    <div class="{{ class }}">
-                        {% include component.d_product_thumb.template with component.d_product_thumb %}
-                    </div>
-                    {% if column_left and column_right and (i + 1) % 2 == 0 %}
-                        <div class="clearfix visible-md visible-sm"></div>
-                    {% elseif column_left or column_right and (i + 1) % 3 == 0 %}
-                        <div class="clearfix visible-md"></div>
-                    {% elseif (i + 1) % 4 == 0 %}
-                        <div class="clearfix visible-md"></div>
-                    {% endif %}
-                    {% set i = i + 1 %}
-                {% endfor %} </div>
-        {% endif %}
-        {% if tags %}
-            <p class="vz-product-product__tags">{{ text_tags }}
-                {% for i in 0..tags|length %}
-                    {% if i < (tags|length - 1) %} <a href="{{ tags[i].href }}">{{ tags[i].tag }}</a>,
-                    {% else %} <a href="{{ tags[i].href }}">{{ tags[i].tag }}</a> {% endif %}
-                {% endfor %} </p>
-        {% endif %}
+                {% if minimum > 1 %}
+                    <div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ text_minimum }}</div>
+                {% endif %}</div>
+            {% if review_status %}
+                {% include component.d_rating.template with component.d_rating|merge({
+                    static_rating:true,
+                }) %}
+                <a href=""
+                   onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ reviews }}</a>
+                / <a href=""
+                     onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ text_write }}</a>
+                <hr>
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style" data-url="{{ share }}"><a
+                            class="addthis_button_facebook_like" fb:like:layout="button_count"></a> <a
+                            class="addthis_button_tweet"></a> <a class="addthis_button_pinterest_pinit"></a> <a
+                            class="addthis_counter addthis_pill_style"></a></div>
+                <script type="text/javascript"
+                        src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script>
+                <!-- AddThis Button END -->
+            {% endif %} </div>
+    </div>
+    {% if products %}
+        <h3>{{ text_related }}</h3>
+        <div class="row"> {% set i = 0 %}
+            {% for product in products %}
+                {% if column_left and column_right %}
+                    {% set class = 'col-xs-8 col-sm-6' %}
+                {% elseif column_left or column_right %}
+                    {% set class = 'col-xs-6 col-md-4' %}
+                {% else %}
+                    {% set class = 'col-xs-6 col-sm-3' %}
+                {% endif %}
+                <div class="{{ class }}">
+                    {% include component.d_product_thumb.template with component.d_product_thumb %}
+                </div>
+                {% if column_left and column_right and (i + 1) % 2 == 0 %}
+                    <div class="clearfix visible-md visible-sm"></div>
+                {% elseif column_left or column_right and (i + 1) % 3 == 0 %}
+                    <div class="clearfix visible-md"></div>
+                {% elseif (i + 1) % 4 == 0 %}
+                    <div class="clearfix visible-md"></div>
+                {% endif %}
+                {% set i = i + 1 %}
+            {% endfor %} </div>
+    {% endif %}
+    {% if tags %}
+        <p class="vz-product-product__tags">{{ text_tags }}
+            {% for i in 0..tags|length %}
+                {% if i < (tags|length - 1) %} <a href="{{ tags[i].href }}">{{ tags[i].tag }}</a>,
+                {% else %} <a href="{{ tags[i].href }}">{{ tags[i].tag }}</a> {% endif %}
+            {% endfor %} </p>
+    {% endif %}
 </div>
 <script type="text/javascript"><!--
-	$(document).ready(function () {
-		Product.init({
-			product_id: '{{ product_id }}',
-			$quantity: $('.input-quantity'),
-			minimum: '{{ minimum }}'
-		});
-		$('.js-anchor').click(function (e) {
-			e.preventDefault();
-			var moveTo = $(this).data('anchor');
+    $(document).ready(function () {
+        Product.init({
+            product_id: '{{ product_id }}',
+            $quantity: $('.input-quantity'),
+            minimum: '{{ minimum }}'
+        });
+        $('.js-anchor').click(function (e) {
+            e.preventDefault();
+            var moveTo = $(this).data('anchor');
 
-			$('html, body').animate({
-				scrollTop: $(moveTo).offset().top
-			}, 500);
-		});
-	});
-	//-->
+            $('html, body').animate({
+                scrollTop: $(moveTo).offset().top
+            }, 500);
+        });
+    });
+    //-->
 </script>
