--- a/catalog/view/theme/d_visualize/template/component/form_group/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/form_group/default.twig
@@ -23,7 +23,7 @@
 {% endif %}
 <div {% if form_group.id %}id="{{ form_group.id }}"{% endif %} class="{{ form_group_class }}" {% if form_group.atributest %}{{ form_group.atributest|raw }}{% endif %}>
         <label class="{{ form_group_label_class }} "
-               for="{{ input.id }}"><span>{{ form_group.label_text }}</span></label>
+                {% if form_group.id %} for="{{ input.id }}" {% endif %}><span>{{ form_group.label_text }}</span></label>
         <div class="{{ form_group_div_class }}">
             {% if form_group.input_group is defined %}
                 {% include component.input_group.template with form_group %}
