--- a/catalog/view/theme/d_visualize/stylesheet/vz-component/input_group/default.css
+++ b/catalog/view/theme/d_visualize/stylesheet/vz-component/input_group/default.css
@@ -5,7 +5,7 @@
       flex: 1 1 auto;
       width: auto;
       .vz-button {
-        height: 100%;//perfect group
+        height: 100%;
         border-bottom-left-radius: 0;
         border-top-left-radius: 0;
       }
